tests/type-data/should_compile/TDDataConstructor.hs
{-# LANGUAGE TypeData #-}
module TDDataConstructor where

type data P = MkP
data Prom = P
