tests/type-data/should_fail/TDMultiple02.hs
{-# LANGUAGE TypeData #-}
module TDMultiple02 where

type data P = MkP
type data Prom = P -- type P is multiply defined
